--- a/app/views/letter/list.rhtml
+++ b/app/views/letter/list.rhtml
@@ -1,7 +1,5 @@
 <div class="sectionheader">Letters</div>
-<p>These are <%= kingdom['name']%>'s Internal Letter of Intent. Commentary is open until
-the 10th of the month following the letter, so the August ILoI is open for
-comments until September 10.</p>
+<p>These are <%= kingdom['name']%>'s Internal Letter of Intent.</p>
 <table>
 <tr>
 <td colspan=5>Currently active letters:</td>
