--- a/app/views/user/change_password.rhtml
+++ b/app/views/user/change_password.rhtml
@@ -1,5 +1,5 @@
 <%= error_messages_for :user %>
-<div class="sectionheader">Change Password for <%= @user.login %></div>
+<div class="sectionheader">Change Password for <%= h(@user.login) %></div>
 <% form_for :user do |f| %>
 <table>
   <tr>
